; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_livetree.c_get_node_phandle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_livetree.c_get_node_phandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.node = type { i64 }

@get_node_phandle.phandle = internal global i32 1, align 4
@.str = private unnamed_addr constant [14 x i8] c"linux,phandle\00", align 1
@empty_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_node_phandle(%struct.node* %0, %struct.node* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.node*, align 8
  %5 = alloca %struct.node*, align 8
  store %struct.node* %0, %struct.node** %4, align 8
  store %struct.node* %1, %struct.node** %5, align 8
  %6 = load %struct.node*, %struct.node** %5, align 8
  %7 = getelementptr inbounds %struct.node, %struct.node* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load %struct.node*, %struct.node** %5, align 8
  %12 = getelementptr inbounds %struct.node, %struct.node* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, -1
  br i1 %14, label %15, label %20

15:                                               ; preds = %10
  %16 = load %struct.node*, %struct.node** %5, align 8
  %17 = getelementptr inbounds %struct.node, %struct.node* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %3, align 4
  br label %50

20:                                               ; preds = %10, %2
  %21 = load %struct.node*, %struct.node** %5, align 8
  %22 = call i32 @get_property(%struct.node* %21, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  br label %27

27:                                               ; preds = %32, %20
  %28 = load %struct.node*, %struct.node** %4, align 8
  %29 = load i32, i32* @get_node_phandle.phandle, align 4
  %30 = call i64 @get_node_by_phandle(%struct.node* %28, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %27
  %33 = load i32, i32* @get_node_phandle.phandle, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* @get_node_phandle.phandle, align 4
  br label %27

35:                                               ; preds = %27
  %36 = load i32, i32* @get_node_phandle.phandle, align 4
  %37 = sext i32 %36 to i64
  %38 = load %struct.node*, %struct.node** %5, align 8
  %39 = getelementptr inbounds %struct.node, %struct.node* %38, i32 0, i32 0
  store i64 %37, i64* %39, align 8
  %40 = load %struct.node*, %struct.node** %5, align 8
  %41 = load i32, i32* @empty_data, align 4
  %42 = load i32, i32* @get_node_phandle.phandle, align 4
  %43 = call i32 @data_append_cell(i32 %41, i32 %42)
  %44 = call i32 @build_property(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %43, i32* null)
  %45 = call i32 @add_property(%struct.node* %40, i32 %44)
  %46 = load %struct.node*, %struct.node** %5, align 8
  %47 = getelementptr inbounds %struct.node, %struct.node* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = trunc i64 %48 to i32
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %35, %15
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @get_property(%struct.node*, i8*) #1

declare dso_local i64 @get_node_by_phandle(%struct.node*, i32) #1

declare dso_local i32 @add_property(%struct.node*, i32) #1

declare dso_local i32 @build_property(i8*, i32, i32*) #1

declare dso_local i32 @data_append_cell(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
